fix: Align settings panel to the center of the viewport

--- a/src/css/kantan.css
+++ b/src/css/kantan.css
@@ -510,8 +510,9 @@ body.previewMode:not(.view-mode) #previewer {
     box-shadow: var(--shadow-button);
     display: none;
     position: fixed;
-    top: 50px;
-    right: 16px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1500;
     width: 280px;
 }
